--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li class="list-inline-item">/</li>
                 <li class="list-inline-item"><a href="https://sitrucp.github.io/covid_canada_vaccinations/index.html">Canada Covid-19 Vaccination Schedule</a></li>
                 <li class="list-inline-item">/</li>
-                <li class="list-inline-item">Global Covid-19 Vaccination Schedule</li>
+                <li class="list-inline-item">Canada vs World</li>
                 <li class="list-inline-item">/</li>
                 <li class="list-inline-item"><a href="https://sitrucp.github.io/canada_covid_health_regions/small_multiples/index.html">Canada Days Since Last New Case</a></li>
             </ul>
@@ -49,7 +49,8 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h4 id="title">Global COVID-19 Vaccination Schedule</h4>
+            <h1 id="title">Canada vs World</h1>
+            <p id="last_update"></p>
         </div>
     </div>
 
