--- a/index.html
+++ b/index.html
@@ -36,20 +36,18 @@
     <div class="row">
         <div class="col-md-12">
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="https://sitrucp.github.io/canada_covid_health_regions/index.html">Canada Covid-19 Case Map</a></li>
+                <li class="list-inline-item"><a href="https://sitrucp.github.io/canada_covid_health_regions/">Canada Covid-19 Case Map</a></li>
                 <li class="list-inline-item">/</li>
-                <li class="list-inline-item"><a href="https://sitrucp.github.io/covid_canada_vaccinations/index.html">Canada Covid-19 Vaccination Schedule</a></li>
+                <li class="list-inline-item"><a href="https://sitrucp.github.io/covid_canada_vaccinations/">Canada Covid-19 Vaccination Schedule</a></li>
                 <li class="list-inline-item">/</li>
-                <li class="list-inline-item">Canada vs World</li>
-                <li class="list-inline-item">/</li>
-                <li class="list-inline-item"><a href="https://sitrucp.github.io/canada_covid_health_regions/small_multiples/index.html">Canada Days Since Last New Case</a></li>
+                <li class="list-inline-item">Canada Covid-19 Vaccination vs World</li>
             </ul>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <h1 id="title">Canada vs World</h1>
+            <h1 id="title">Canada Covid-19 Vaccination vs World</h1>
             <p id="last_update"></p>
         </div>
     </div>
