--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
     <div class="row">
         <div class="col-md-12">
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="https://sitrucp.github.io/canada_covid_health_regions/">Canada Covid-19 Case Map</a></li>
+                <li class="list-inline-item"><a href="https://sitrucp.github.io/canada_covid_health_regions/">Canada COVID-19 Case Map</a></li>
                 <li class="list-inline-item">/</li>
-                <li class="list-inline-item"><a href="https://sitrucp.github.io/covid_canada_vaccinations/">Canada Covid-19 Vaccination Schedule</a></li>
+                <li class="list-inline-item"><a href="https://sitrucp.github.io/covid_canada_vaccinations/">Canada COVID-19 Vaccination Schedule</a></li>
                 <li class="list-inline-item">/</li>
-                <li class="list-inline-item">Canada Covid-19 Vaccination vs World</li>
+                <li class="list-inline-item">Canada COVID-19 Vaccination vs World</li>
             </ul>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <h1 id="title">Canada Covid-19 Vaccination vs World</h1>
+            <h1 id="title">Canada COVID-19 Vaccination vs World</h1>
             <p id="last_update"></p>
         </div>
     </div>
@@ -66,7 +66,7 @@
                 <li>Canada's "Daily Doses Per 100 Persons" is shown by date. This metric shows Canada's actual daily dose administration.</li>
             </ul>
 
-            <p class="text-muted">COVID-91 vaccine data comes from <a href = "https://github.com/owid/covid-19-data/tree/master/public/data/vaccinations" target="blank">Our World In Data</a> who are doing an amazing job collating COVID-19 data from around the world!</p>
+            <p class="text-muted">COVID-19 vaccine data comes from <a href = "https://github.com/owid/COVID-19-data/tree/master/public/data/vaccinations" target="blank">Our World In Data</a> who are doing an amazing job collating COVID-19 data from around the world!</p>
             
             <!--
             <a href="#" onclick="hideShowDiv('read_more');">Read more</a>
