change y2 to # countries from per 100

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <ul>
                 <li>"Total Doses Per 100 Persons" is shown for all countries administering vaccines that are tracked by Our World in Data organization. Canada's value is highlighted and shows current global ranking by doses per 100 people.</li>
                      
-                <li>Canada's "Total Doses Per 100 Persons" and it's global ranking are shown by date. This shows Canada's relative global ranking changes by day. A higher rank means that other countries are administering more doses per 100 people than Canada.</li>
+                <li>Canada's daily "Total Doses Per 100 Persons" global ranking is shown by date along with # of countries in ranking. This shows Canada's relative global ranking changes by day. Relatively higher rank means that other countries are administering more doses per 100 people than Canada.</li>
 
                 <li>Canada's "Daily Doses Per 100 Persons" is shown by date. This metric shows Canada's actual daily dose administration.</li>
             </ul>
