--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
             <p>These visualizations illustrate Canada's COVID-19 vaccine dose administration global ranking and daily changes. The 3 visualizations include:</p>
             
             <ul>
-                <li>"Total Doses Per 100 Persons" is shown for all countries administering vaccines that are tracked by Our World in Data organization. Canada's value is highlighted and shows current global ranking by doses per 100 people.</li>
+                <li><span class="font-italic">Tracking How Canada Compares To Other Countries: </span>Global ranked "Total Doses Per 100 Persons" for all countries currently administering vaccines and racked by Our World in Data organization. Shows Canada's relative ranking.</li>
                      
-                <li>Canada's daily "Total Doses Per 100 Persons" global ranking is shown by date along with # of countries in ranking. This shows Canada's relative global ranking changes by day. Relatively higher rank means that other countries are administering more doses per 100 people than Canada.</li>
+                <li><span class="font-italic">Tracking Canada's Changing Rank Relative To Other Countries:</span> Canada's "Total Doses Per 100 Persons" global ranking, and # of countries in ranking, are shown by date. Shows Canada's changing global rank.</li>
 
-                <li>Canada's "Daily Doses Per 100 Persons" is shown by date. This metric shows Canada's actual daily dose administration.</li>
+                <li><span class="font-italic">Tracking Canada's Daily Dose Administration:</span> Canada's "Daily Doses Per 100 Persons" is shown by date. Shows Canada's absolute daily dose administration.</li>
             </ul>
 
             <p class="text-muted">COVID-19 vaccine data comes from <a href = "https://github.com/owid/COVID-19-data/tree/master/public/data/vaccinations" target="blank">Our World In Data</a> who are doing an amazing job collating COVID-19 data from around the world!</p>
