update text content

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             <p>These visualizations illustrate Canada's COVID-19 vaccine dose administration global ranking and daily changes. The visualizations include:</p>
             
             <ul>
-                <li><span class="font-italic">Tracking How Canada Compares To Other Countries: </span>Global ranked "Total Doses Per 100 Persons" for all countries currently administering vaccines and racked by Our World in Data organization. Shows Canada's relative ranking. Note: as OWID adds new countries to its dataset, Canada's past rank may change if new country has past data. Also, relative rank changes as total number of countries is growing. Chart has rank and # countries to show relative rank.</li>
+                <li><span class="font-italic">Tracking How Canada Compares To Other Countries: </span>Global ranked "Total Doses Per 100 Persons" for all countries currently administering vaccines and racked by Our World in Data organization. Shows Canada's relative ranking. Note: Canada's ranking may change as OWID adds new countries to its dataset. To provide insight into relative ranking the chart includes both daily rank and number of countries.</li>
                 
                <!--
                 <li><span class="font-italic">Tracking Canada's Changing Rank Relative To Other Countries:</span> Canada's "Total Doses Per 100 Persons" global ranking, and # of countries in ranking, are shown by date. Shows Canada's changing global rank. Note: same as above.</li>
                 -->
 
-                <li><span class="font-italic">Tracking Canada's Daily Dose Administration:</span> Canada's "Daily Doses Per 100 Persons" is shown by date. Shows Canada's absolute daily dose administration. Note: OWID started sourcing data from Canadian government site that only has vaccination data starting Jan 12 even though Canada has been administering vaccines since Dec 14, 2020. Hopefully GoC site shows all historical data.</li>
+                <li><span class="font-italic">Tracking Canada's Daily Dose Administration:</span> Canada's "Daily Doses Per 100 Persons" is shown by date. Shows Canada's absolute daily dose administration. Note: OWID sources Canada data from   Canadian government which only contains vaccination data starting Jan 12, 2021 even though Canada has been administering vaccines since Dec 14, 2020. Hopefully the Canadian government updates the data source to include data from Dec 14, 2020.</li>
 
             </ul>
 
