--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-md-12">
             <ul class="list-inline">
