--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <p>These visualizations illustrate Canada's COVID-19 vaccine dose administration global ranking and daily changes.</p>
 
-            <p class="text-italic">COVID-19 vaccine data comes from <a href = "https://github.com/owid/COVID-19-data/tree/master/public/data/vaccinations" target="blank">Our World In Data (OWID)</a> who are doing an amazing job collating COVID-19 data from around the world!</p>
+            <p class="font-italic">COVID-19 vaccine data comes from <a href = "https://github.com/owid/COVID-19-data/tree/master/public/data/vaccinations" target="blank">Our World In Data (OWID)</a> who are doing an amazing job collating COVID-19 data from around the world!</p>
             
             <!--
             <a href="#" onclick="hideShowDiv('read_more');">Read more</a>
