update menu, chart orientation

--- a/index.html
+++ b/index.html
@@ -41,22 +41,25 @@
 <body>
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="https://sitrucp.github.io/canada_covid_health_regions/">Canada COVID-19 Case Map</a></li>
-                <li class="list-inline-item">/</li>
-                <li class="list-inline-item"><a href="https://sitrucp.github.io/covid_canada_vaccinations/">Canada COVID-19 Vaccination Schedule</a></li>
-                <li class="list-inline-item">/</li>
-                <li class="list-inline-item">Canada COVID-19 Vaccination vs World</li>
-            </ul>
-        </div>
-    </div>
 
     <div class="row">
         <div class="col-md-12">
             <h1 id="title">Canada COVID-19 Vaccination vs World</h1>
             <p id="last_update"></p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <ul class="list-inline small">
+                <li class="list-inline-item"><a href="https://sitrucp.github.io/canada_covid_health_regions/">Canada COVID-19 Case Map</a></li>
+                <li class="list-inline-item">/</li>
+                <li class="list-inline-item"><a href="https://sitrucp.github.io/covid_canada_vaccinations/">Canada COVID-19 Vaccination Schedule</a></li>
+                <li class="list-inline-item">/</li>
+                <li class="list-inline-item">Canada COVID-19 Vaccination vs World</li>
+                <li class="list-inline-item">/</li>
+                <li class="list-inline-item"><a href="https://sitrucp.github.io/covid_world_vaccinations/">Global COVID-19 Vaccination Ranking</a></li>
+            </ul>
         </div>
     </div>
 
@@ -77,8 +80,6 @@
             <div id="div_daily_rank" class="div_chart"></div>
 
             <div id="div_daily_global_rank" class="div_chart"></div>
-
-            <div id="div_vaccine_group" class="div_chart"></div>
 
             <p>Site files: <a href="https://github.com/sitrucp/covid_global_vaccinations" target="blank">github.com/sitrucp/covid_global_vaccinations</a></p>
 
