--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="row row-no-gutters">
 
-        <div class="col-md-9">
+        <div class="col-md-12">
 
             <p>These visualizations illustrate Canada's COVID-19 vaccine dose administration global ranking and history.</p>
 
@@ -79,10 +79,10 @@
             <p class="font-italic">COVID-19 vaccine data comes from <a href = "https://github.com/owid/COVID-19-data/tree/master/public/data/vaccinations" target="blank">Our World In Data (OWID)</a> who are doing an amazing job collating COVID-19 data from around the world!</p>
             
             <div id="read_more" style="display:none"></div>
-            <div id="div_total_per100_rank" class="div_chart"></div>
-            <div id="div_daily_per100_rank" class="div_chart"></div>
-            <div id="div_total_per100_rank_history" class="div_chart"></div>
-            <div id="div_daily_per100_rank_history" class="div_chart"></div>
+            <div class="div_chart" id="div_total_per100_rank"></div>
+            <div class="div_chart" id="div_daily_per100_rank"></div>
+            <div class="div_chart" id="div_total_per100_rank_history"></div>
+            <div class="div_chart" id="div_daily_per100_rank_history"></div>
 
             <p>Site files: <a href="https://github.com/sitrucp/covid_global_vaccinations" target="blank">github.com/sitrucp/covid_global_vaccinations</a></p>
 
