--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="row row-no-gutters">
 
-        <div class="col-md-12">
+        <div class="col-md-10">
 
             <p>These visualizations illustrate Canada's COVID-19 vaccine dose administration global ranking and history.</p>
 
@@ -87,6 +87,8 @@
             <p>Site files: <a href="https://github.com/sitrucp/covid_global_vaccinations" target="blank">github.com/sitrucp/covid_global_vaccinations</a></p>
 
         </div>
+
+        <div class="col-md-2"></div>
 
     </div>
 
