--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
     <link rel="stylesheet" type="text/css" href="site.css" />
@@ -29,11 +27,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-S4LS6EL929"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'G-S4LS6EL929');
+        gtag('config', 'G-S4LS6EL929');
     </script>
 
 </head>
@@ -80,11 +78,19 @@
 
             <p class="font-italic">Note following duplicate counts are excluded from OWID data: UK nations England, Northern Ireland, Scotland, Wales as well as global regions Africa, Asia, Europe, European Union, North America, South America, Oceania & World.</p>
 
-            <span><strong>Filter countries:</strong></span>
+            <span><strong>Group:</strong></span>
             <div class="btn-group flex-wrap" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-light group" value="all">All</button>
-                <button type="button" class="btn btn-light group" value="OECD">OECD</button>
-                <button type="button" class="btn btn-light group" value="G20">G20</button>
+                <button type="button" class="btn btn-light country-group" value="all">All</button>
+                <button type="button" class="btn btn-light country-group" value="OECD">OECD</button>
+                <button type="button" class="btn btn-light country-group" value="G20">G20</button>
+            </div>
+
+            <br><span><strong>Population:</strong></span>
+            <div class="btn-group flex-wrap" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-light country-pop" value="all">All</button>
+                <button type="button" class="btn btn-light country-pop" value="5">>5m</button>
+                <button type="button" class="btn btn-light country-pop" value="15">>15m</button>
+                <button type="button" class="btn btn-light country-pop" value="30">>30m</button>
             </div>
 
             <div id="read_more" style="display:none"></div>
