add loading spinner

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
             </div>
 
             <div id="read_more" style="display:none"></div>
-            <div class="div_chart" id="div_total_per100_rank"></div>
+            <div class="div_chart" id="div_total_per100_rank">
+                <div id="loading" class="spinner-grow" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
             <div class="div_chart" id="div_daily_per100_rank"></div>
             <div class="div_chart" id="div_total_per100_rank_history"></div>
             <div class="div_chart" id="div_daily_per100_rank_history"></div>
