remove bullet list

--- a/index.html
+++ b/index.html
@@ -65,17 +65,9 @@
 
         <div class="col-md-10">
 
-            <p>These visualizations illustrate Canada's COVID-19 vaccine dose administration global ranking and history.</p>
-
-            <ul>
-                <li>Total Doses Per 100 People Global Rank - Current and Historical</li>
-                <li>Daily Doses Per 100 People Global Rank - Current and Historical</li>
-                <li>People Vaccinated Per 100 People Global Rank - Current and Historical</li>
-            </ul>
+            <p>These visualizations illustrate Canada's COVID-19 vaccine dose administration global ranking and history. Use buttons to filter by country group or popluation.</p>
             
             <p class="font-italic">COVID-19 vaccine data comes from <a href = "https://github.com/owid/COVID-19-data/tree/master/public/data/vaccinations" target="blank">Our World In Data (OWID)</a> who are doing an amazing job collating COVID-19 data from around the world!</p>
-
-            <p class="font-italic">Note following duplicate counts are excluded from OWID data: UK nations England, Northern Ireland, Scotland, Wales as well as global regions Africa, Asia, Europe, European Union, North America, South America, Oceania & World.</p>
 
             <span><strong>Group:</strong></span>
             <div class="btn-group flex-wrap" role="group" aria-label="Basic example">
@@ -109,6 +101,8 @@
             <div class="div_section"><h4>People Vaccinated Per 100 People</h4></div>
             <div class="div_chart" id="div_people_vax_per100_rank"></div>
             <div class="div_chart" id="div_people_vax_per100_rank_history"></div>
+
+            <p class="font-italic">Note following duplicate counts are excluded from OWID data: UK nations England, Northern Ireland, Scotland, Wales as well as global regions Africa, Asia, Europe, European Union, North America, South America, Oceania & World.</p>
 
             <p>Site files: <a href="https://github.com/sitrucp/covid_global_vaccinations" target="blank">github.com/sitrucp/covid_global_vaccinations</a></p>
 
