--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
 
             <div id="read_more" style="display:none"></div>
 
-            <div class="div_section"><h4>Total Doses Per 100 People</h4></div>
+            <div class="div_section">
+                <h4>Total Doses Per 100 People</h4>
+                <p>Total number of doses administered, per 100 people in the total population of the country. This is counted as a single dose, and may not equal the total number of people vaccinated, depending on the specific dose regime (e.g. people receive multiple doses). If a person receives one dose of the vaccine, this metric goes up by 1. If they receive a second dose, it goes up by 1 again.</p>
+            </div>
             <div class="div_chart" id="div_total_per100_rank">
                 <div id="loading" class="spinner-grow" role="status">
                     <span class="sr-only">Loading...</span>
@@ -94,11 +97,17 @@
             </div>
             <div class="div_chart" id="div_total_per100_rank_history"></div>
 
-            <div class="div_section"><h4>Daily Doses Per 100 People</h4></div>
+            <div class="div_section">
+                <h4>Daily Doses Per 100 People</h4>
+                <p>New doses administered per day (7-day smoothed), per 100 people in the total population of the country. For countries that don't report data on a daily basis, it is assume that doses changed equally on a daily basis over any periods in which no data was reported. This produces a complete series of daily figures, which is then averaged over a rolling 7-day window.</p>
+            </div>
             <div class="div_chart" id="div_daily_per100_rank"></div>
             <div class="div_chart" id="div_daily_per100_rank_history"></div>
 
-            <div class="div_section"><h4>People Vaccinated Per 100 People</h4></div>
+            <div class="div_section">
+                <h4>People Vaccinated Per 100 People</h4>
+                <p>Total number of people who received at least one vaccine dose, per 100 people in the total population of the country. If a person receives the first dose of a 2-dose vaccine, this metric goes up by 1. If they receive the second dose, the metric stays the same.</p>
+            </div>
             <div class="div_chart" id="div_people_vax_per100_rank"></div>
             <div class="div_chart" id="div_people_vax_per100_rank_history"></div>
 
