refactor history data

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
             <div class="div_section">
                 <h4>People Vaccinated Per 100 People</h4>
-                <p>Total number of people who received at least one vaccine dose, per 100 people in the total population of the country. If a person receives the first dose of a 2-dose vaccine, this metric goes up by 1. If they receive the second dose, the metric stays the same.</p>
+                <p>Share of people who received at least one vaccine dose. Total number of people who received at least one vaccine dose, per 100 people in the total population of the country. If a person receives the first dose of a 2-dose vaccine, this metric goes up by 1. If they receive the second dose, the metric stays the same.</p>
             </div>
             <div class="div_chart" id="div_people_vax_per100_rank"></div>
             <div class="div_chart" id="div_people_vax_per100_rank_history"></div>
