add stable urls

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
             
             <p class="font-italic">COVID-19 vaccine data comes from <a href = "https://github.com/owid/COVID-19-data/tree/master/public/data/vaccinations" target="blank">Our World In Data (OWID)</a> who are doing an amazing job collating COVID-19 data from around the world!</p>
 
+          <!--
+            <span><strong>Country:</strong></span>
+            <select name="countries" class="country" id="countries">
+                <option value="Canada">Canada</option>
+                <option value="Finland">Finland</option>
+                <option value="etc">etc</option>
+            </select><br>
+            -->
+
             <span><strong>Group:</strong></span>
             <div class="btn-group flex-wrap" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-light country-group" value="all">All</button>
